...
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Hi, Lynda"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
...
